# nomad-monorepo

./: .gitignore  README.md  package-lock.json  package.json  pre-commit.sh
rust/: Cargo.toml  Dockerfile  DockerfileV2  README.md  build.sh  provision_kms_keys.py  release.sh
rust/agents/kathy/: Cargo.toml
rust/agents/processor/: Cargo.toml
rust/agents/relayer/: Cargo.toml
rust/agents/updater/: Cargo.toml
rust/agents/watcher/: Cargo.toml
rust/chains/: README.md
rust/chains/nomad-ethereum/: Cargo.toml  build.rs
rust/config/default/: watcher-partial.json
rust/config/development/: alfajores_config.json  alfajores_contracts.json  alfajores_verification.json  evmostestnet_config.json  evmostestnet_contracts.json  evmostestnet_sdk.json  kathy-partial.json  kovan_config.json  kovan_contracts.json  kovan_sdk.json  kovan_verification.json  milkomedaTestnet_config.json  milkomedaTestnet_sdk.json  milkomedatestnet_config.json  milkomedatestnet_contracts.json  milkomedatestnet_sdk.json  moonbasealpha_config.json  moonbasealpha_contracts.json  moonbasealpha_sdk.json  moonbasealpha_verification.json  rinkeby_config.json  rinkeby_contracts.json  rinkeby_sdk.json  rinkeby_verification.json  watcher-partial.json
rust/config/kovanAstar/: astar_config.json  astar_contracts.json  astar_sdk.json  astar_verification.json  kovan_config.json  kovan_contracts.json  kovan_sdk.json  kovan_verification.json
rust/config/mainnet/: celo_config.json  (+16 more)
rust/newmad/: Cargo.toml  README.md
rust/nomad-base/: Cargo.toml
rust/nomad-core/: Cargo.toml
rust/nomad-test/: Cargo.toml
(+611 files in other folders)
