[package]
name = "newmad"
version = "0.1.0"
authors = ["James Prestwich <james@nomad.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["rt", "macros"] }

ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
nomad-core = { version = "0.1.0", path = "../nomad-core" }
async-trait = "0.1.52"
thiserror = "1.0.30"
