[package]
name = "balance-exporter"
version = "0.1.0"
edition = "2021"
description = "Polls chains for nomad contract wallet balances and reports them in OpenMetrics format"
authors = ["Illusory Systems Inc. <james@nomad.xyz>"]
license = "Apache-2.0"

[dependencies]
tokio = "1"
futures = "0.3"

metrics = "0"
metrics-exporter-prometheus = "0"
serde_json = "1"
serde = "1"
color-eyre = "0"
clap = "3.0.0-beta.4"
human-panic = "1"

nomad-base = { path = "../../nomad-base" }

# SMELL: reaching into the implementation details. abstract eventually.
nomad-ethereum = { path = "../../chains/nomad-ethereum" }
